--- a/src/app/user/register/register.component.css
+++ b/src/app/user/register/register.component.css
@@ -75,7 +75,7 @@ input[type="submit"]{ /*ESTILOS PARA EL BOTÓN */
 
 }
 
-input[type="submit"]:hover{
+input[type="submit"]:hover{ /* TRANSICIONA AL VOLVER */
     border-color: purple;
     transition: 0.2s;
 }
